--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-prettier": "^9.1.0",
     "lucide-react": "^0.407.0",
     "next": "14.2.5",
+    "node-appwrite": "^13.0.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
