--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "eslint-config-prettier": "^9.1.0",
     "lucide-react": "^0.407.0",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "node-appwrite": "^13.0.0",
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
